# blathers

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  blathers.yaml  pyproject.toml
docs/superpowers/plans/: 2026-04-02-blathers-v1.md
examples/prism/: blathers.yaml
examples/prism/ontology/: prism-minimal.ttl
examples/prism/sidecars/: ComplianceRecord.md  _index.md
sidecars/: _index.md
src/blathers/: __init__.py  classifier.py  cli.py  config.py  conneg.py  diagrams.py  extract.py  imports.py  manifest.py  queries.py  renderer.py  serialize.py  sidecars.py
src/blathers/templates/: base.html.j2  index.html.j2  narrative.html.j2  term.html.j2
src/blathers/validators/: __init__.py  base.py  completeness.py  consistency.py  conventions.py  overlap.py  shacl.py
tests/: test_cli.py  test_cli_integration.py  test_config.py  test_conneg.py  test_diagrams.py  test_extract.py  test_imports.py  test_manifest.py  test_renderer.py  test_serialize.py  test_sidecars.py
tests/fixtures/: bad-instance.ttl  blathers.yaml  imported.ttl  instance.ttl  minimal.ttl  shapes.ttl
tests/fixtures/sidecars/: MyClass.md  _index.md
tests/validators/: test_completeness.py  test_consistency.py  test_conventions.py  test_overlap.py  test_shacl.py
