[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blathers"
version = "1.0.0a1"
description = "Ontology documentation & validation CLI — bridges auto-extracted OWL/SHACL definitions with Markdown narrative"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "BigSpark" }]
keywords = ["ontology", "owl", "shacl", "documentation", "rdf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "click>=8.1",
    "rdflib>=7.0",
    "pyshacl>=0.26",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    "markdown>=3.5",
    "jinja2>=3.1",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-tmp-files>=0.0.2",
]

[project.scripts]
blathers = "blathers.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/blathers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
